fix(theme): fix unintended alignment change for icons in card header
`.card-header .icon` will also affect everything in nested components,
including search-bar, content-action-bar, etc.

Move the special case to the si-card component where it's used.

--- a/projects/element-theme/src/styles/bootstrap/_card.scss
+++ b/projects/element-theme/src/styles/bootstrap/_card.scss
@@ -127,11 +127,6 @@ button.card {
   background-color: variables.$card-cap-bg;
   line-height: typography.$si-font-size-h5;
 
-  .icon {
-    // The icon would be 8px too high without this.
-    margin-block: - map.get(spacers.$spacers, 2);
-  }
-
   + .card-body {
     margin-block-start: map.get(spacers.$spacers, 2) * -1;
     padding-block-start: map.get(spacers.$spacers, 2);
